# drivendata-conservision-practice

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: PREDICT.ipynb  TRAIN.ipynb  benchmark.ipynb
src/: config.py
src/data/: ConsPrac.py  ConsPracDataModule.py  utils.py
src/models/: ConvNeXt_Tiny.py  EfficientNetV2S.py  LitConsPrac.py  ResNet50.py
