[tool.poetry]
name = "conservision-practice"
version = "0.1.0"
description = ""
authors = ["Luc Bams <lbm@mediaan.com>"]
readme = "README.md"
packages = [{include = "conservision_practice", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^2.1.0"
torch = {version = "^2.4.0+cu118", source = "pytorch-gpu"}
torchvision = {version = "^0.19.0+cu118", source = "pytorch-gpu"}
torchaudio = {version = "^2.4.0+cu118", source = "pytorch-gpu"}
lightning = "^2.4.0"


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"
tqdm = "^4.66.5"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
